# EmedicalConnect

./: .gitignore  .replit  README.md  app.py  config.py  forms.py  manage.py  models.py  pyproject.toml  requirements.txt  routes.py
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
appointments/: forms.py  models.py  urls.py  views.py
appointments/migrations/: 0001_initial.py
emedic/: asgi.py  settings.py  urls.py  wsgi.py
medical_records/: forms.py  models.py  urls.py  views.py
medical_records/migrations/: 0001_initial.py
messaging/: admin.py  context_processors.py  models.py  urls.py  views.py
messaging/migrations/: 0001_initial.py
static/css/: custom.css  messaging.css  styles.css
static/js/: conversation.js  messaging.js  notification.js  script.js  scripts.js
templates/: base.html  index.html
templates/account/: email.html  login.html  password_change.html  password_reset.html  signup.html
templates/accounts/: admin_profile.html  dashboard_base.html  doctor_detail.html  doctor_list.html  doctor_profile.html  edit_admin_profile.html  edit_doctor_profile.html  edit_patient_profile.html  home.html  patient_profile.html
templates/appointments/: add_feedback.html  add_notes.html  admin_appointments.html  book.html  cancel.html  complete.html  detail.html  doctor_appointments.html  manage.html  my_appointments.html  reschedule.html  view.html  view_feedback.html
templates/auth/: login.html  register.html
templates/dashboard/: admin.html  doctor.html  patient.html
templates/pages/: about.html  (+1 more)
(+6 files in other folders)
