[project]
name = "EmedicalConnect"
version = "0.1.0"
description = "EmedicalConnect is a web-based platform for managing digital health records, doctor appointments, prescriptions, and secure messaging between patients and healthcare providers."
requires-python = ">=3.11"
dependencies = [
    "django-allauth>=65.7.0",
    "django==5.1.4",
    "email-validator>=2.2.0",
    "gunicorn>=23.0.0",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "django-postman>=4.5",
    "django-channels>=0.7.0",
    "django-crispy-forms>=2.4",
    "django-bootstrap5>=25.1",
    "django-widget-tweaks>=1.5.0",
    "dj-database-url>=2.3.0",
    "flask-wtf>=1.2.2",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
]
